--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,20 @@ a {
   border-color: #558fb3;
 }
 
+.hotel-search {
+  color: #000000;
+
+  background-color: #ffffff;
+  background-position: 0 0;
+  background-repeat: repeat;
+}
+
+.hotel-search h3{
+  font-size: 14px;
+  line-height: 26px;
+  text-align: justify;
+}
+
 .main-footer {
   color: #000000;
 
